<resources>
    <string name="app_name">Weather App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_plus">button plus</string>
    <string name="three_dot_button">three dot button</string>
    <string name="status_icon_weather">status icon weather</string>
    <string name="wind_attribute">Wind</string>
    <string name="rain_attribute">Rain Volume</string>
    <string name="humidity">Humidity</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="unit_setting">UNIT</string>
    <string name="extra_setting">EXTRA</string>
    <string name="setting_title">Setting</string>
    <string name="location">Hanoi</string>
    <string name="forcats_for_7_days">Forcats for 7 Days</string>
    <string name="manage_location">Manage Location</string>
    <string name="c_degree">°C</string>
    <string name="f_degree">°F</string>
    <string name="km_h">%.2f km/h</string>
    <string name="mil_h">%.2f mil/h</string>
    <string name="m_s">%.2f m/s</string>
    <string name="kn">%.2f kn</string>
    <string name="mbar">%d mbar</string>
    <string name="atm">%.2f atm</string>
    <string name="mmhg">%.2f mmHg</string>
    <string name="inhg">%.2f inHg</string>
    <string name="hpa">%d hPa</string>
    <string name="mbarString">mbar</string>
    <string name="mmhgString">mmHg</string>
    <string name="atmString">atm</string>
    <string name="inhgString">inHg</string>
    <string name="hpaString">hPa</string>
    <string name="km_hString">km/h</string>
    <string name="mil_hString">mil/h</string>
    <string name="m_sString">m/s</string>
    <string name="knString">kn</string>
    <string name="setting_temp_title">Temperature unit</string>
    <string name="setting_wind_title">Wind speed unit</string>
    <string name="setting_atmos_title">Atmospheric pressure unit</string>
    <string name="setting_theme_title">Theme</string>
    <string name="item_light_title">Light</string>
    <string name="item_dark_title">Dark</string>
</resources>