<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_weather"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:cardCornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue3"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:background="@color/blue3"
                    android:contentDescription="@string/button_plus"
                    android:scaleX="0.5"
                    android:scaleY="0.5"
                    android:src="@drawable/plus_button" />

                <TextView
                    android:id="@+id/location"
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:gravity="center"
                    android:textColor="@color/white"
                    tools:text="@string/app_name" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:background="@color/blue3"
                    android:contentDescription="@string/three_dot_button"
                    android:scaleType="centerInside"
                    android:src="@drawable/three_dot_icon" />

            </LinearLayout>

            <ImageView
                android:id="@+id/icon_weather"
                android:layout_width="180dp"
                android:layout_height="166dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:contentDescription="@string/status_icon_weather"
                tools:ignore="ImageContrastCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/day_in_week"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    tools:text="@string/app_name" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="20dp"
                    android:layout_margin="5dp"
                    android:background="@color/white" />

                <TextView
                    android:id="@+id/day_in_month"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    tools:text="@string/app_name" />

            </LinearLayout>

            <TextView
                android:id="@+id/temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="50sp"
                android:textStyle="bold"
                tools:text="37\u2103" />

            <TextView
                android:id="@+id/weather_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:text="Rain" />

            <View
                android:layout_width="300dp"
                android:layout_height="2dp"
                android:layout_margin="10dp"
                android:background="@color/white" />

            <FrameLayout
                android:layout_width="300dp"
                android:layout_height="100dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:gravity="start|top">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/wind_icon" />

                    <TextView
                        android:id="@+id/wind"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:textColor="@color/white"
                        tools:text="3.7 km/h" />

                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/wind_attribute"
                        android:textColor="@color/white" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:gravity="end|top">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/rain_icon" />

                    <TextView
                        android:id="@+id/chance_of_rain"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/rain_attribute"
                        android:textColor="@color/white" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:gravity="start|bottom">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/temp_icon" />

                    <TextView
                        android:id="@+id/pressure"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="20dp"
                        android:text="Pressure"
                        android:textColor="@color/white" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="end|bottom">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/humidity_icon" />

                    <TextView
                        android:id="@+id/humidity"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/humidity"
                        android:textColor="@color/white" />

                </RelativeLayout>

            </FrameLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/blue3"
        app:cardCornerRadius="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_weather">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue3"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/day_in_week_bold"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:gravity="center_horizontal"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    tools:text="@string/app_name" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="15dp"
                    android:layout_margin="5dp"
                    android:background="@color/white" />

                <TextView
                    android:id="@+id/day_in_month_bold"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    tools:text="@string/app_name" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/predict_hourly_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="24"
                tools:listitem="@layout/weather_per_hour" />

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="16dp"
        android:background="#00FFFFFF"
        android:text="Forcats for 7 Days"
        android:textAllCaps="false"
        android:textColor="@color/blue3"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>